Worker orchestration